Add new fonts and update package name

--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>رياض اللغة</title>
 </head>
 
 <body>
-    أهلا وسهلا
+    <div style="text-align: center;">
+        أهلا وسهلا بكم رفقة تطبيق رياض اللغة
+    </div>
 
     <script type="module" src="/app/riadh_main.js"></script>
     <script>
